2008-02-10  Wakaba  <wakaba@suika.fam.cx>

	* CSSStyleSheet.pm (manakai_input_encoding): New.

2008-02-08  Wakaba  <wakaba@suika.fam.cx>

	* CSSRule.pm (@media, @import ____new): Bless media object
	with the appropriate class.
	(@media css_text): Getter implemented.

	* MediaList.pm (media_text): Getter implemented.

2008-02-03  Wakaba  <wakaba@suika.fam.cx>

	* CSSStyleDeclaration.pm ($serialize_value): Support
	for new value types.

2008-02-02  Wakaba  <wakaba@suika.fam.cx>

	* CSSStyleDeclaration.pm ($serialize_value): New (was
	part of Whatpm::CSS::Parser as $default_serializer).
	Use it instead of old 'serialize' parameter of CSS
	property definition.

2008-01-26  Wakaba  <wakaba@suika.fam.cx>

	* CSSStyleDeclaration.pm (css_text): Prepend | ! | before
	the priority token if any.
	(get_property_priority): Shorthand case implemented.

2008-01-26  Wakaba  <wakaba@suika.fam.cx>

	* CSSStyleDeclaration.pm: Use |serialize_shorthand|
	and |serialize_multiple| to serialize shorthand properties
	in reflecting attributes.  Return value of 
	the |serialzie_multiple| function has been changed.
	(non-computed css_text): Sort by property names.

2008-01-24  Wakaba  <wakaba@suika.fam.cx>

	* Window.pm (manakai_get_computed_style): Renamed
	from |get_computed_style|.

	* Element.pm (manakai_computed_style): Renamed from |current_style|.

2008-01-14  Wakaba  <wakaba@suika.fam.cx>

	* CSSStyleDeclaration.pm (AUTOLOAD): DOM attributes reflecting
	shorthand properties did croak (fixed but still they does not 
	return correct result - they need to be fixed later).

	* Element.pm (query_selector, query_selector_all): Prototypes
	were missing.

2008-01-14  Wakaba  <wakaba@suika.fam.cx>

	* Window.pm (___reset_css): Typo fixed.

2008-01-14  Wakaba  <wakaba@suika.fam.cx>

	* CSSStyleDeclaration.pm: The classes now explicitly implement
	the |CSS2Properties| interface.
	(@{}, TIEARRAY, FETCH, FETCHSIZE, EXISTS, item, length): Implemented.

2008-01-14  Wakaba  <wakaba@suika.fam.cx>
