@@ -1,3 +1,7 @@
+2008-02-11  Wakaba  <wakaba@suika.fam.cx>
+
+	* CSSRule.pm (@import css_text): Implemented.
+
 2008-02-10  Wakaba  <wakaba@suika.fam.cx>
 
 	* CSSStyleSheet.pm (manakai_input_encoding): New.
